<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to the Happiness Project</string>
    <string name="user_name">Enter username</string>
    <string name="password">Enter password</string>
    <string name="app_name">Android-happiness-project</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
	<string name="no_account">No account?</string>

</resources>